fix: hide the scrollbar on transactions table

--- a/assets/stylesheets/shared/constants.css
+++ b/assets/stylesheets/shared/constants.css
@@ -34,6 +34,5 @@
     /* table constants */
     --table-padding: 10px;
     --transactions-table-margin: auto auto 30px;
-    --transactions-table-even-row-background: #f2f2f2;
     --transactions-table-tbody-height: 400px;
 }
